# PRML

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
datasets/: athens_temperature.csv  old_faithful.csv
images/: neuron.excalidraw
notebooks/: ch1_introduction.ipynb  ch2_probability_distributions.ipynb  ch3_linear_models_for_regression.ipynb  ch4_linear_models_for_classification.ipynb  ch5_neural_networks.ipynb  ch6_kernel_methods.ipynb  ch7_sparse_kernel_machines.ipynb  ch9_mixture_models_and_em.ipynb  gradient_descent_algorithms.ipynb
prml/: __init__.py
prml/clustering/: __init__.py  k_means.py
prml/datasets/: __init__.py  datasets.py  utils.py
prml/distribution/: __init__.py  bernoulli.py  beta.py  binomial.py  categorical.py  dirichlet.py  distribution.py  gamma.py  gaussian.py  generic_distribution.py  multinomial.py  multivariate_gaussian.py  multivariate_gaussian_mixture.py  student_t.py
prml/feature/: __init__.py  basis_function.py  gaussian.py  polynomial.py  sigmoidal.py
prml/helpers/: array.py
prml/kernel/: __init__.py  gaussian_process_classifier.py  gaussian_process_regression.py  kernel.py  rbf.py  relevance_vector_classifier.py  relevance_vector_regressor.py  support_vector_classifier.py  support_vector_regressor.py
prml/linear/: __init__.py  bayesian_logistic_regression.py  bayesian_regression.py  classifier.py  evidence_approximation.py  fisher_linear_discriminant.py  generative_classifier.py  least_square_classifier.py  linear_regression.py  logistic_regression.py  perceptron.py  regression.py  ridge_regression.py
prml/neighbors/: __init__.py  nearest_neighbor.py  neighbors.py  neighbors_density.py
prml/nn/: __init__.py  activations.py  loss.py  modules.py  network.py  optimizer.py
prml/preprocessing/: __init__.py  basis_function.py  gaussian.py  one_hot_encoder.py  polynomial.py  sigmoidal.py
