[project]
name = "PRML"
description = "PRML notes and algorithms implemented in Python."
readme = "README.md"
requires-python = ">=3.9"
keywords = [ ]
dynamic = [ "version", "classifiers", "dependencies" ]


[[project.authors]]
name = "Evangelos Michelioudakis"
email = "vagmcs@gmail.com"


[project.license]
text = "GPL-3.0-only"


[project.urls]
homepage = "https://github.com/vagmcs/prml"
repository = "https://github.com/vagmcs/prml"
documentation = "https://github.com/vagmcs/prml"


[tool.poetry]
version = "0.3.0a0"
requires-poetry = ">=2.0"
classifiers = [ ]


[[tool.poetry.packages]]
include = "prml"


[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
scipy = "^1.10.1"
sympy = "^1.11.1"
mpmath = "^1.2.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
scikit-learn = "^1.1.2"


[tool.poetry.group.dev.dependencies]
docformatter = "^1.7.7"
nbqa = "^1.9.1"
isort = "^6.0.1"
ruff = "^0.12.7"
mypy = "^1.17.0"
pyupgrade = "^3.20.0"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"
nbconvert = "^7.16.6"
nbmerge = "^0.0.4"
pyppeteer = "^1.0.2"


[tool.mypy]
python_version = "3.9"
exclude = [ ".venv", "dist" ]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
implicit_reexport = true


[tool.docformatter]
black = true
in-place = true
recursive = true
pre-summary-newline = true
make-summary-multi-line = true


[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
color_output = true
sections = [
"FUTURE",
"TYPING",
"STDLIB",
"THIRDPARTY",
"FIRSTPARTY",
"LOCALFOLDER"
]
known_typing = "typing"
import_heading_future = "Futures"
import_heading_stdlib = "Standard Library"
import_heading_typing = "Types"
import_heading_thirdparty = "Dependencies"
import_heading_firstparty = "Project"


[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
".bzr",
".direnv",
".eggs",
".git",
".git-rewrite",
".hg",
".ipynb_checkpoints",
".mypy_cache",
".nox",
".pants.d",
".pyenv",
".pytest_cache",
".pytype",
".ruff_cache",
".svn",
".tox",
".venv",
".vscode",
"__pypackages__",
"_build",
"buck-out",
"build",
"dist",
"node_modules",
"site-packages",
"venv"
]


[tool.ruff.format]
docstring-code-format = true


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
